[package]
name = "aibroker"
version = "1.0.0"
edition = "2024"

[dependencies]
# HTTP server and client
axum = "0.8"
reqwest = { version = "0.13.3", features = ["json", "default-tls"] }
hyper = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Pingora - async HTTP proxy framework
pingora = { version = "0.8.0", features = ["proxy", "lb","rustls"] }
pingora-proxy = "0.8.0"
pingora-core = "0.8.0"
pingora-error = "0.8.0"

# Async runtime
tokio = { version = "1.52", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
http = "1.4.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.21"
dashmap = "6.1"
parking_lot = "0.12"
url = "2"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
